# MP_check

./: .gitignore  PROJECT_STRUCTURE_NOTES.md  README.md  otziv.md  otziv2.md  otziv3.md  otziv4.md  otziv5.md  wb_visual_search.py  БЫСТРЫЙ_ТЕСТ.txt  Презентация_оценка_товара.html
prototype/: .env.example  .gitignore  README.md  demo_analogs.py  pyproject.toml  requirements.txt  saol_core.py
prototype/app/: db.py  main.py  models.py  schemas.py  settings.py
prototype/app/routers/: health.py  history.py  lookup.py  taxonomy.py
prototype/app/services/: analytics.py  benchmark_cache.py  category_extractor.py  engine.py  forecast.py  liquidity.py  mapping.py  name_match.py  reason_codes.py  retail_history.py  snapshots.py  subjects.py  taxonomy.py  wb_http.py  wb_visual_search.py
prototype/data/: coefficient.json
prototype/docs/: FORMULAS.md  МЕТОДОЛОГИЯ_v2.md
prototype/reports/: field_qa_1688_2026-05-29.md
prototype/saol2/: __init__.py  demo_item.py  metrics.py  mpstats.py  pipeline.py  scoring.py  serve.py  visual.py  web_app.py
prototype/scripts/: build_category_benchmark.py  build_category_coefficient.py  build_marketplace_mapping.py  field_regression.py  import_classifier.py  import_marketplace_revenue.py  import_retail_history.py  import_wb_subjects.py
prototype/tests/: conftest.py  test_benchmark_cache.py  test_benchmark_subject_filter.py  test_engine.py  test_liquidity.py  test_mapping.py  test_name_match.py  test_retail_history.py  test_taxonomy.py  test_wb_visual_search.py
prototype/web/: app.js  index.html  manifest.json  styles.css  sw.js
(+4 files in other folders)
