[project]
name = "saol-system"
version = "0.1.0"
description = "Система автоматизированной оценки ликвидности товаров на основе маркетплейсов (СAOL)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "requests>=2.32",
    "cryptography>=42.0",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "tenacity>=8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 110
target-version = "py311"
